# wechat-copilot

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vsc-agent.py  wcp-worker.py
cpp/: CMakeLists.txt
cpp/include/wcp/: adapter.hpp  config.hpp  http.hpp  ilink.hpp  json_utils.hpp  router.hpp  tools.hpp
cpp/include/wcp/agents/: copilot.hpp  sidecar.hpp
cpp/src/: adapter_t.cc  config.cpp  config_t.cc  http.cpp  http_t.cc  ilink.cpp  ilink_t.cc  main.cpp  router.cpp  router_t.cc  setup.cpp  setup_t.cc  tools.cpp
cpp/src/agents/: copilot.cpp  sidecar.cpp  sidecar_t.cc
src/: config.ts  ilink.ts  index.ts  router.ts  setup.ts  store.ts
src/adapters/: wechat.ts
src/agents/: copilot.ts  gemma.ts  omnicode.ts
